--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <div class="typewriter">
                 <h1>Thank's</h1>
               </div>
-              <p>simple app using js</p>
+              <p>simple app using js & animate</p>
+            <p>by:sahrilputra</p>
         </div>
     </div>
 
